--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,4 +9,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Trigger automated deployment
-        run: curl https://your.web.server.com/automated_deployment.php
+        run: curl https://newaccounts.smeird.com/automated_deployment.php
